name:                   lua-parser
version:                0.1.0.0
synopsis:               Lua parser
description:            Lua parser
homepage:               http://github.com/mitchellwrosen/lua-parser
license:                BSD3
license-file:           LICENSE
author:                 Mitchell Rosen
maintainer:             mitchellwrosen@gmail.com
-- copyright:
category:               Web
build-type:             Simple
-- extra-source-files:
cabal-version:          >=1.10

Flag exes
  Description:          "Build executables"
  Default:              False

library
  hs-source-dirs:       src
  exposed-modules:      Lexer
                      , Parser
                      , Syntax
                      , Token
  other-modules:        Internal
  build-depends:        base >= 4.7 && < 5
                      , Earley
                      , lexer-applicative
                      , microlens
                      , regex-applicative
                      , semigroups
                      , srcloc
                      , transformers
                      , unordered-containers
  default-language:     Haskell2010
  default-extensions:   DeriveDataTypeable
                      , DeriveFunctor
                      , OverloadedLists
                      , OverloadedStrings
                      , ScopedTypeVariables
                      , StandaloneDeriving
                      , RankNTypes
                      , RecursiveDo
                      , TupleSections
                      , ViewPatterns
  ghc-options:        -Wall

executable parse
  if !flag(exes)
    buildable: False

  hs-source-dirs:       app
  main-is:              Parse.hs
  build-depends:        base
                      , Earley
                      , lexer-applicative
                      , lua-parser
                      , srcloc
  default-language:     Haskell2010

executable interactive-lexer
  if !flag(exes)
    buildable: False

  hs-source-dirs:       app
  main-is:              InteractiveLexer.hs
  build-depends:        base
                      , lexer-applicative
                      , lua-parser
                      , srcloc
  default-language:     Haskell2010

executable interactive-parser
  if !flag(exes)
    buildable: False

  hs-source-dirs:       app
  main-is:              InteractiveParser.hs
  build-depends:        base
                      , Earley
                      , lexer-applicative
                      , lua-parser
                      , srcloc
  default-language:     Haskell2010

test-suite lua-parser-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  other-modules:        Instances
  build-depends:        base
                      , lexer-applicative
                      , lua-parser
                      , QuickCheck
                      , semigroups
                      , srcloc
                      , tasty
                      , tasty-hunit
                      , unordered-containers
  ghc-options:          -Wall -threaded -rtsopts -with-rtsopts=-N
  default-extensions:   FlexibleInstances
  default-language:     Haskell2010

source-repository head
  type:     git
  location: https://github.com/mitchellwrosen/lua-parser
